// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNav render with index icon 1`] = `
<BaseLeftNav
  links={
    Array [
      Object {
        "status": 1,
      },
      Object {
        "status": 1,
      },
    ]
  }
  renderIcon={[Function]}
  selectedKey="some key"
/>
`;

exports[`AssessmentLeftNav render with index icon 2`] = `
<span
  className="index-circle"
/>
`;

exports[`AssessmentLeftNav render with status icon 1`] = `
<BaseLeftNav
  links={
    Array [
      Object {
        "status": -1,
      },
      Object {
        "status": -1,
      },
    ]
  }
  renderIcon={[Function]}
  selectedKey="some key"
/>
`;

exports[`AssessmentLeftNav render with status icon 2`] = `
<span>
  <StatusIcon
    className="dark-gray"
    level="test"
    status={-1}
  />
</span>
`;
